syntax = "proto3";

message AccessToken{
  string accessToken = 1;
}

message UserCD{
  string userName = 1;
  bool isCreate = 2;
}

message GrpcResult{
  bool isSuccess = 1;
  string resultMessage = 2;
}

service AuthServer{
  rpc getUserName(AccessToken) returns (GrpcResult){}
}

//other server
service MusicListServer {
  rpc createAndDeletePlaylistForUser(UserCD) returns (GrpcResult){}
}